<resources>
    <string name="app_name">PerPro</string>
    <string name="if_home">&#xe8c6;</string>
    <string name="if_recommend">&#xe63f;</string>
    <string name="if_chat">&#xe63c;</string>
    <string name="if_profile">&#xe634;</string>
    <string name="if_category">&#xe600;</string>
    <string name="if_favorite">&#xe639;</string>
    <string name="if_favorite1">&#xe620;</string>
    <string name="if_back">&#xe607;</string>
    <string name="if_back_soild">&#xe680;</string>
    <string name="if_unexpected">&#xe606;</string>
    <string name="if_unexpected1">&#xe692;</string>
    <string name="item_collection">&#xe604;   我的收藏</string>
    <string name="item_notify">&#xe654;  课程通知</string>
    <string name="item_history">&#xe606;   浏览历史</string>
    <string name="item_playground">&#xe640;   playground</string>
    <string name="item_address">&#xe603;   收货地址</string>
    <string name="title_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="input_item_user_name">用户名</string>
    <string name="input_item_hint_username">请输入用户名</string>
    <string name="input_item_password">密码</string>
    <string name="input_item_hint_password">请输入密码</string>
    <string name="login_tip_text">提示：如果忘记了密码，请重新注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败:</string>
    <string name="register">注册</string>
    <string name="input_item_order_id">课程订单号</string>
    <string name="input_item_order_id_hint">请输入课程订单号后4位</string>
    <string name="input_item_imooc_id">慕课网ID</string>
    <string name="input_item_imooc_id_hint">请输入慕课网ID</string>
    <string name="user_name_not_login">请先登录</string>
    <string name="login_desc_no_login">解锁全部功能</string>
    <string name="login_desc_login">欢迎回来</string>
    <string name="profile_item_collection">\n收藏</string>
    <string name="profile_item_history">\n历史浏览</string>
    <string name="profile_item_learn">\n学习时长</string>
    <string name="home_search_hint">&#xe987; 搜索你想要的商品</string>
    <string name="title">商品的标题商品的标题商品的标题商品的标题商品的标题商品的标题商品的标题商品的标题商品的标题</string>
    <string name="get_profile_failed">获取用户信息失败</string>
    <string name="detail_goods_num">商品数量：%s 已拼：%s</string>
    <string name="detail_similar_title">&#xe6d1; 相似商品</string>
    <string name="detail_favorite_success">收藏成功</string>
    <string name="detail_cancel_favorite_success">取消收藏成功</string>
    <string name="detail_order_text">\n立即购买</string>
    <string name="notice_title">公告</string>
</resources>