<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    tools:context=".account.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <net.lishaoy.ui.iconfont.IconFontTextView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:text="@string/if_back"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/color_000"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/color_000"
            android:textSize="@dimen/sp_16"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_d1d2" />

    <net.lishaoy.ui.input.InputItemLayout
        android:id="@+id/input_item_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/left_lineAppearance"
        app:title="@string/input_item_user_name"
        app:hint="@string/input_item_hint_username"
        android:paddingLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"/>

    <net.lishaoy.ui.input.InputItemLayout
        android:id="@+id/input_item_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:bottomLineAppearance="@style/left_lineAppearance"
        app:title="@string/input_item_password"
        app:hint="@string/input_item_hint_password"
        android:paddingLeft="@dimen/dp_16"
        app:inputType="password"
        android:background="@color/color_white"/>

    <net.lishaoy.ui.input.InputItemLayout
        android:id="@+id/input_item_order_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:bottomLineAppearance="@style/left_lineAppearance"
        app:title="@string/input_item_order_id"
        app:hint="@string/input_item_order_id_hint"
        android:paddingLeft="@dimen/dp_16"
        android:background="@color/color_white"/>

    <net.lishaoy.ui.input.InputItemLayout
        android:id="@+id/input_item_imooc_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:bottomLineAppearance="@style/lineAppearance"
        app:title="@string/input_item_imooc_id"
        app:hint="@string/input_item_imooc_id_hint"
        android:paddingLeft="@dimen/dp_16"
        app:inputType="password"
        android:background="@color/color_white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:textColor="@color/color_white"
        android:text="@string/register"
        android:textSize="@dimen/sp_16"
        android:backgroundTint="@color/colorPrimary" />

</LinearLayout>