<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <net.lishaoy.common.ui.view.IconFontTextView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:gravity="center"
            android:text="@string/if_back"
            android:textSize="@dimen/sp_24"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/color_000"
            android:textSize="@dimen/sp_16"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/color_298"
            android:textSize="@dimen/sp_16"
            android:paddingHorizontal="6dp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_d1d2" />

    <net.lishaoy.common.ui.view.InputItemLayout
        android:id="@+id/input_item_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:topLineAppearance="@style/lineAppearance"
        app:bottomLineAppearance="@style/left_lineAppearance"
        app:title="@string/input_item_user_name"
        app:hint="@string/input_item_hint_username"
        android:paddingLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"/>

    <net.lishaoy.common.ui.view.InputItemLayout
        android:id="@+id/input_item_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:bottomLineAppearance="@style/lineAppearance"
        app:title="@string/input_item_password"
        app:hint="@string/input_item_hint_password"
        android:paddingLeft="@dimen/dp_16"
        android:background="@color/color_white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:textColor="@color/color_white"
        android:text="@string/title_login"
        android:textSize="@dimen/sp_16"
        android:backgroundTint="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="提示：如果忘记了密码，请重新注册"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_6"
        android:textColor="@android:color/darker_gray"/>

</LinearLayout>